# yt2pdcst

./: .gitignore  Makefile  README.md  config.toml.example  db.py  feed.py  feeds.toml.example  main.py  pixi.toml  pyproject.toml  requirements  rss.py
.github/workflows/: pylint.yml
templates/: entry.jinja  index.jinja  meta.jinja
