[tool.poetry]
name = "yt2pdcst"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2023.12.30"
feedparser = "^6.0.11"
toml = "^0.10.2"
loguru = "^0.7.2"
pickleDB = "^0.9.2"
Jinja2 = "^3.1.2"
mutagen = "^1.47.0"

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
